@startuml class_diagram_full
' ============================================================================
' S32K_MediaPlayer - Full Application Class Diagram
' All 4 Layers: Controller, Model, View, Utils
' ============================================================================
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
skinparam packageStyle rectangle

' Use different colors for each layer
skinparam package {
    BackgroundColor<<Controller>> #E3F2FD
    BackgroundColor<<Model>> #E8F5E9
    BackgroundColor<<View>> #FFF3E0
    BackgroundColor<<Utils>> #F3E5F5
}

' ============================================================================
' CONTROLLER LAYER
' ============================================================================
package "Controller" <<Controller>> {
    ' ---- Aggregate Interfaces ----
    interface IAppController <<interface>> {
        +initialize() : bool
        +shutdown() : void
        +play() : void
        +pause() : void
        +next() : void
        +previous() : void
        +setVolume(volume : int) : void
        +loadDirectory(path : string) : size_t
        +connectToBoard(port : string) : bool
    }

    interface IAudioPlayer <<interface>> {
        +initialize() : bool
        +shutdown() : void
        +load(filePath : string) : bool
        +play() : void
        +pause() : void
        +stop() : void
        +seek(positionMs : uint32_t) : void
        +setVolume(volume : int) : void
    }

    interface ISerialManager <<interface>> {
        +connect(portName, baudRate) : bool
        +disconnect() : void
        +send(data : string) : int
        +setDataCallback(callback) : void
    }

    ' ---- Main Facades ----
    class AppController {
        -mAudioPlayer : shared_ptr<IAudioPlayer>
        -mSerialManager : shared_ptr<ISerialManager>
        -mPlayerState : shared_ptr<IPlayerState>
        -mPlaylistManager : unique_ptr<PlaylistManagerImpl>
        -mPlaybackController : unique_ptr<PlaybackControllerImpl>
        -mVolumeController : unique_ptr<VolumeControllerImpl>
        -mAppState : atomic<AppState>
        --
        .. delegates to composed components ..
    }

    class AudioPlayer {
        -mLifecycle : unique_ptr<AudioLifecycleImpl>
        -mLoader : unique_ptr<AudioLoaderImpl>
        -mPlayback : unique_ptr<AudioPlaybackImpl>
        -mVolume : unique_ptr<AudioVolumeImpl>
        --
        .. delegates to composed components ..
    }

    class SerialManager {
        -mConnection : unique_ptr<SerialConnectionImpl>
        -mIO : unique_ptr<SerialIOImpl>
        --
        .. delegates to composed components ..
    }

    AppController ..|> IAppController
    AudioPlayer ..|> IAudioPlayer
    SerialManager ..|> ISerialManager

    AppController --> IAudioPlayer : uses
    AppController --> ISerialManager : uses
}

' ============================================================================
' MODEL LAYER
' ============================================================================
package "Model" <<Model>> {
    ' ---- Aggregate Interfaces ----
    interface IPlayerState <<interface>> {
        +getPlaybackStatus() : PlaybackStatus
        +setPlaybackStatus(status) : void
        +getVolume() : int
        +setVolume(volume : int) : void
        +getCurrentPosition() : uint32_t
        +getCurrentTrackIndex() : int
        +getRepeatMode() : RepeatMode
        +isShuffleEnabled() : bool
    }

    interface IMediaFile <<interface>> {
        +getFilename() : string
        +getPath() : string
        +getDuration() : uint32_t
        +getArtist() : string
        +getAlbum() : string
        +getCoverArt() : vector<uint8_t>&
    }

    ' ---- Main Facades ----
    class PlayerState {
        -mPlaybackState : PlaybackStateImpl
        -mVolumeState : VolumeStateImpl
        -mTrackPosition : TrackPositionImpl
        -mNavigation : PlaylistNavigationImpl
        --
        .. all methods use atomic operations ..
    }

    class MediaFile {
        -mFileInfo : MediaFileInfo
        -mMetadata : MediaMetadata
        -mCoverArt : CoverArt
        --
        .. delegates to composed components ..
    }

    PlayerState ..|> IPlayerState
    MediaFile ..|> IMediaFile
}

' ============================================================================
' VIEW LAYER
' ============================================================================
package "View" <<View>> {
    interface IView <<interface>> {
        +initialize() : bool
        +shutdown() : void
        +isRunning() : bool
        +processEvents() : void
        +render() : void
    }

    interface IWindowComponent <<interface>> {
        +render() : void
    }

    class ImGuiView {
        -mController : shared_ptr<IAppController>
        -mPlayerState : shared_ptr<IPlayerState>
        -mLifecycle : unique_ptr<LifecycleManager>
        -mAssetManager : shared_ptr<AssetManager>
        -mMainContent : unique_ptr<MainContent>
        -mRightSidebar : unique_ptr<RightSidebar>
        -mPlayerBar : unique_ptr<PlayerBar>
    }

    class LifecycleManager {
        -mWindow : SDL_Window*
        -mRenderer : SDL_Renderer*
    }

    class AssetManager {
        -mRenderer : SDL_Renderer*
        -mCoverCache : map<int, SDL_Texture*>
    }

    class MainContent
    class RightSidebar
    class PlayerBar

    ImGuiView ..|> IView
    MainContent ..|> IWindowComponent
    RightSidebar ..|> IWindowComponent
    PlayerBar ..|> IWindowComponent

    ImGuiView *-- LifecycleManager
    ImGuiView *-- AssetManager
    ImGuiView *-- MainContent
    ImGuiView *-- RightSidebar
    ImGuiView *-- PlayerBar
}

' ============================================================================
' INTER-LAYER DEPENDENCIES
' ============================================================================

Controller <--> Model
View <--> Controller



@enduml
